--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -38,3 +38,27 @@
     padding-bottom: 100%;
     width: var(--galwidth);
 }
+
+/* varsha hexagons */
+.hex-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.hex-row {
+    display: flex;
+    justify-content: center;
+    margin-top: -30px; /* Adjust this value to change the vertical overlap */
+}
+.hex {
+    width: 300px;
+    height: 340px;
+    margin: 0 5px;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    overflow: hidden;
+}
+.hex img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
