--- a/_layouts/tab.html
+++ b/_layouts/tab.html
@@ -6,15 +6,15 @@ layout: default
 
 <h1> {{page.title}} </h1>
 
+{% if page.leftblock %}
 <div class="block">
 <div class="sideways"><h1>
-    {% if tab.sideways %}
-        {{ page.sideways }}
-    {% else %}
-        {{ page.title }} 
-    {% endif %}
+    {{ page.leftblock }}
 </h1></div>
+{% endif %}
 
 {{ content }}
 
+{% if page.leftblock %}
 </div>
+{% endif %}
