--- a/cssjs/main.css
+++ b/cssjs/main.css
@@ -7,6 +7,10 @@
     top: 50%;
 }
 
+.wrapper {
+    max-width: 1000px !important;
+}
+
 .block {
     margin-top: 30px;
     border-left: 5px solid #EAE;
