lots of minor changes for the better

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,8 @@
 
 <navbar>
-<li class="nav-item"><a href="/">home</a></li>
+<!-- <li class="nav-home"><a href="/">Voli</a></li> -->
+<!-- <li class="nav-home"><a href="/"></a></li> -->
+<li class="nav-item"><a href="/">@</a></li>
 {% for tab in site.tabs %}
 <li class="nav-item {% if tab.url == page.url%}current-tab{% endif %}">
     <a href="{{tab.url}}" >
