--- a/_includes/gallery.html
+++ b/_includes/gallery.html
@@ -1,10 +1,20 @@
 <link rel="stylesheet" href="{{ "/cssjs/gallery.css" | relative_url }}" />
 
-<div style="height:80px"></div>
 
 {% assign image_files = site.static_files | where_exp: "item", "item.path contains '/assets/gallery'" %} 
+
+{% if include.save_image_names_js %}
+<script type="text/javascript">
+    let {{include.save_image_names_js}} = [
+        {% for imgfile in image_files %}'{{imgfile.path}}',{% endfor %} ];
+</script>
+{% endif %}
+
 {% assign i = 0 %}
 {% assign num_imgs = include.gridnums | default : "4,5" | split: "," %}
+{% unless include.nospacers %}  
+<div class="gallery-spacer"></div>
+{% endunless %}
 <div class="hex-container">
     {% for row in num_imgs %}
     <div class="hex-row">
@@ -17,3 +27,6 @@
     </div>
     {% endfor %}
 </div>
+{% unless include.nospacers %} 
+<div class="small-spacer"></div>
+{% endunless %}
