--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,10 +13,13 @@ https://github.com/riggraz/no-style-please/blob/master/_includes/head.html.-->
         {{ site.title }}
       {%- endif -%}
     </title>
+
   
-    {%-seo title=false-%}
-    {%-feed_meta-%}
-  
+    <!-- custom fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" />
     <link rel="stylesheet" href="{{ "/cssjs/main.css" | relative_url }}" />
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}" />
