--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -8,21 +8,44 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    /* max-width: 640px; */
+    /* width: 100%; */
 }
 .hex-row {
     display: flex;
     justify-content: center;
-    margin-top: -60px; /* Adjust this value to change the vertical overlap */
+    margin-top: -65px; /* Adjust this value to change the vertical overlap */
+}
+.hex, .hex:before {
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 .hex {
-    width: 300px;
-    height: 340px;
+    width: var(--imgwidth);
+    height: var(--imgheight);
     margin: 0 10px;
-    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
     overflow: hidden;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
 }
+.hex:before {
+    content: '';
+    width: calc(var(--imgwidth) + 6px);
+    height: calc(var(--imgheight) + 6px);
+    background: #000;
+    /* display: ; */
+    position: relative;
+    top: 1px;
+    left: 1px;
+  }
 .hex img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover;   
+}
+.gallery-spacer {
+    height: 85px;
+}
+.small-spacer {
+    height: 35px;
 }
