--- a/cssjs/main.css
+++ b/cssjs/main.css
@@ -1,3 +1,32 @@
+/* replacement for default styling, which I have now removed */
+
+*:target { background: yellow; }
+navbar {
+    text-align:center;
+    display:block;
+    min-height: 70px;
+    margin-bottom: 20px;
+}
+body {
+    color: #222;
+    /* font-family: monospace; */
+    font-family: "EB Garamond", serif;
+    font-optical-sizing: auto;
+    font-size: 13pt;
+    line-height: 1.4;
+    margin: 0;
+    min-height: 100%;
+}
+
+.center { text-align: center;}
+.main-title { margin : 50px; font-size: 72pt; }
+.wrapper {
+    max-width: 640px;
+    margin: 0 auto;
+    padding: 4rem 2rem;
+}
+
+
 .sideways {
     /* rotate: -90deg; */
     /* border: 1px solid black; */
@@ -7,9 +36,6 @@
     top: 50%;
 }
 
-.wrapper {
-    max-width: 1000px !important;
-}
 
 .block {
     margin-top: 30px;
@@ -24,12 +50,31 @@
     color: gray;
 }
 
+.nav-home {
+    display:inline-block;
+    padding:10px;
+    margin-bottom:10px;
+}
+.nav-home a {
+    text-decoration : none;
+    color:black;
+    /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
+    vertical-align: middle;
+    font-size: 40pt;
+}
+
 .nav-item {
     display: inline-block;
     border-radius: 5px;
     padding:10px;
     margin-bottom:10px;
-    background-color: lightgrey;
+    background-color: rgb(244, 218, 232);
+    border: 2px solid rgb(228, 207, 218);
+    transition: font-size .2s, background-color .15s;
+}
+
+.nav-item:hover{
+    font-size:larger;
 }
 .nav-item a {
     text-decoration : none;
@@ -37,8 +82,27 @@
 
 .nav-item.current-tab {
     font-size: larger;
-    background-color: slategray;
-    color:color-mix(in srgb, slategray 20%, blue)
+    background-color: color-mix(in srgb, white 20%, rgb(195, 60, 138));
 }
 .nav-item:not(.current-tab) {
+}
+
+.fullpagewidth {
+    text-align: center;
+    position: relative;
+    /* left: calc(50% - 50vw); */
+    left: calc(50% - 49vw);
+    overflow: hidden;
+    width: 98vw;
+}
+
+.marquee {
+    position: relative;
+    /* animation: marquee 10s linear infinite; */
+    width: 100%;
+}
+
+@keyframes marquee1 {
+    0%   { transform: translate(0, 0); }
+    100% { transform: translate(-100%, 0); }
 }
