--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html lang="{{ page.lang | default: "en" }}">
   {%- include head.html -%}
   <body>
+    <div class="rain-pane"></div>
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         {{ content }}
