--- a/_layouts/tab.html
+++ b/_layouts/tab.html
@@ -4,7 +4,9 @@ layout: default
 
 {% include navbar.html %}
 
+<div class="center">
 <h1> {{page.title}} </h1>
+</div>
 
 {% if page.leftblock %}
 <div class="block">
