--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -10,6 +10,7 @@
     align-items: center;
     /* max-width: 640px; */
     /* width: 100%; */
+    /* opacity: 50%; */
 }
 .hex-row {
     display: flex;
