significant rain improvement + event layout tweaks

--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -1,6 +1,7 @@
 :root {
     --imgwidth: 300px;
     --imgheight: 340px;
+    --hex-spacing: 10px;
 }
 
 /* varsha hexagons */
@@ -23,7 +24,8 @@
 .hex {
     width: var(--imgwidth);
     height: var(--imgheight);
-    margin: 0 10px;
+    /* margin: 0 10px; */
+    margin: 0 var(--hex-spacing);
     overflow: hidden;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
