--- a/cssjs/main.css
+++ b/cssjs/main.css
@@ -3,6 +3,7 @@
 :root{
     --vcolor:rgb(20, 54, 54);
     --ocolor:rgb(144, 28, 88);
+    --accent:#EAE;
 }
 
 *:target { background: yellow; }
@@ -44,7 +45,8 @@ body {
 
 .block {
     margin-top: 30px;
-    border-left: 5px solid #EAE;
+    /* border-left: 5px solid #EAE; */
+    border-left: 5px solid var(--accent);
     padding-left: 10px;
     position:relative;
 }
@@ -53,6 +55,10 @@ body {
     margin-left: 10px;
     font-size: smaller;
     color: gray;
+}
+.evt-details p {
+    margin-top: 1.2ex;
+    margin-bottom: 1.2ex;
 }
 
 .nav-home {
