--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -16,7 +16,8 @@
 .hex-row {
     display: flex;
     justify-content: center;
-    margin-top: -65px; /* Adjust this value to change the vertical overlap */
+    /* margin-top: -65px; Adjust this value to change the vertical overlap */
+    margin-top: calc(0px - var(--imgheight) / 4 + var(--hex-spacing) / 0.8 ); 
 }
 .hex, .hex:before {
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
@@ -41,13 +42,15 @@
     top: 1px;
     left: 1px;
   }
-.hex img {
+
+  .hex img {
     width: 100%;
     height: 100%;
     object-fit: cover;   
 }
+
 .gallery-spacer {
-    height: 85px;
+    height: calc(var(--imgheight) / 4 + var(--hex-spacing) + 10px);
 }
 .small-spacer {
     height: 35px;
