--- a/cssjs/qa.css
+++ b/cssjs/qa.css
@@ -1,4 +1,8 @@
-ul {
-    margin-top: -20px;
-    margin-bottom: -20px;
+ul.slim {
+    margin-top: -14px;
+    margin-bottom: -14px;
 }
+/* 
+ul+p {
+    margin-top: -10px;
+} */
