--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
 {% for tab in site.tabs %}
 <li class="nav-item {% if tab.url == page.url%}current-tab{% endif %}">
     <a href="{{tab.url}}" >
-        {{tab.title}}
+        {{tab.title_short}}
     </a>
 </li>
 {% endfor %}
