--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -9,6 +9,10 @@
     z-index: 4;
 }
 
+.in-flux {
+    filter: blur(10px);
+}
+
 .control {
     position: fixed;
     /* top: calc(50% + 246px /2 ); */
