--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,11 +10,13 @@
     </a>
 </li>
 {% for tab in site.tabs %}
+{% unless tab.hide %}
 <li class="nav-item {% if tab.url == page.url%}current-tab{% endif %}">
-    <a href="{{tab.url}}" >
+    <a href="{{ tab.url | relative_url }}" >
         {{tab.title_short}}
     </a>
 </li>
+{% endunless %}
 {% endfor %}
 </ul>
 </navbar>
