--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,10 @@
     </main>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="{{ site.baseurl }}/cssjs/main.js"></script>
+    <script type="text/javascript" src="/{{ site.baseurl }}cssjs/main.js"></script>
     {% if page.custom_js %}
       {% for js_file in page.custom_js %}
-        <script type="text/javascript" src="{{ site.baseurl }}/cssjs/{{ js_file }}.js"></script>
+        <script type="text/javascript" src="/{{ site.baseurl }}cssjs/{{ js_file }}.js"></script>
       {% endfor %}
     {% endif %}
   </body>
