--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,7 +4,7 @@
 <!-- <li class="nav-home"><a href="/">Voli</a></li> -->
 <!-- <li class="nav-home"><a href="/"></a></li> -->
 <li class="nav-item" > <!-- {% if page.url == '/' %}current-tab{% endif %} -->
-    <a href="/">
+    <a href="{{baseurl}}">
         <!-- <div style="background-image: url('/assets/cloud.png'); width:10px; height:18px;"></div> -->
         <img src="/assets/cloud.png" height="30px" style="margin:-10px -0px; "/>
     </a>
