--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -18,6 +18,10 @@
 </li>
 {% endunless %}
 {% endfor %}
+<li class="nav-item rsvp">
+    <a href="https://forms.gle/1KobqjmUYpwjUKuJ7"> RSVP </a>
+</li>
+
 </ul>
 </navbar>
 
