--- a/_includes/hexphotos.html
+++ b/_includes/hexphotos.html
@@ -5,11 +5,12 @@
 {% endcomment %}
 
 {% assign extra_image_files = site.static_files
-    | where_exp: "item", "item.path contains '/assets/select_photos'" %}
+    | where_exp: "item", "item.path contains '/assets/small'" %}
 
 {% assign image_files = extra_image_files %}
 
 {% if include.save_image_names_js %}
+{{imgfile.name}}
 <script type="text/javascript">
     let {{include.save_image_names_js}} = [
         {% for imgfile in image_files %}'{{ imgfile.path | relative_url }}',{% endfor %} ];
@@ -27,9 +28,12 @@
     {% for row in num_imgs %}
     <div class="hex-row">
         {% for col in (1..row) %}
+        <div class="hex-wrapper">
+        <div class="hex-pad"></div>
         <div class="hex">
             <img src="{{image_files[i].path | relative_url }}" />
             {% assign i = i | plus : 1 %}
+        </div>
         </div>
         {% endfor %}
     </div>
