--- a/cssjs/gallery.css
+++ b/cssjs/gallery.css
@@ -1,25 +1,75 @@
-.hex:hover {
+.hex.active {
+    /* filter: blur(3px) sepia(50%); */
+    /* clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%, 0% 0%); */
+}
+.hex.blurry {
+    filter: blur(3px) grayscale(30%);
+}
+
+.hex-wrapper:hover {
     scale: 130%;
-    z-index: 4;
+    z-index: 2;
+}
+
+.hex-wrapper:hover .hex-pad {
+    --hex-spacing: 20px;
 }
 
 #img-display {
-    position: relative;
-    width: inherit;
-    clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%, 0% 0%);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width:100%;
+    height:100%;
 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    z-index: 3;
+    clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%, 0% 0%);
+    
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
     /* margin:auto; */
     /* width: 60%; */
+    clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%, 0% 0%);
+    /* pointer-events: none; */
 }
 
+#img-display img {
+    vertical-align: middle;
+    border: 10px solid white;
+    max-width: 100vw;
+    max-height: 100vh;
+    /* pointer-events: auto; */
+}
+
+#img-display:not(.active) {
+    width:0px;
+    height:0px;
+    left:50%;
+    top:50%;
+    clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
 #img-display.active{
-    position: fixed;
     width: 100%;
-    clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%, 0% 0%);
 }
 
-.hex.active {
-    clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%, 0% 100%, 0% 0%);
+.transition-bypass {
+    transition: none !important;
+}
+
+
+@media only screen and (max-width: 768px) {
+    .hex-wrapper:nth-child(2) {
+        display: none;
+    }
+    :root {
+        --imgwidth : 45vw;
+        --imgheight: 51vw;
+    }
 }
 
 
