--- a/cssjs/imghex.css
+++ b/cssjs/imghex.css
@@ -17,34 +17,41 @@ html {
     /* width: 100%; */
     /* opacity: 50%; */
 }
+.hex-wrapper {
+    position: relative;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    /* transition: scale .3s ease-in-out,  z-index .3s cubic-bezier(0,1,1,0); */
+    transition: all .3s ease-in-out;
+    margin: 0 var(--hex-spacing);
+    transition-delay: 0.5s;
+}
 .hex-row {
     display: flex;
     justify-content: center;
     /* margin-top: -65px; Adjust this value to change the vertical overlap */
     margin-top: calc(0px - var(--imgheight) / 4 + var(--hex-spacing) / 0.8 ); 
 }
-.hex, .hex:before {
+.hex, .hex-pad {
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
 }
 .hex {
     width: var(--imgwidth);
     height: var(--imgheight);
     /* margin: 0 10px; */
-    margin: 0 var(--hex-spacing);
     overflow: hidden;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
 }
-.hex:before {
-    content: '';
-    width: calc(var(--imgwidth) + 6px);
-    height: calc(var(--imgheight) + 6px);
-    background: #000;
-    /* display: ; */
-    position: relative;
-    top: 1px;
-    left: 1px;
+.hex-pad {
+    content: 'asdf';
+    width: calc(var(--imgwidth) + 2 * var(--hex-spacing));
+    height: calc(var(--imgheight) + 2 * var(--hex-spacing));
+    background: white;
+    position: absolute;
+    top: calc(0px - var(--hex-spacing));
+    left: calc(0px - var(--hex-spacing));
   }
 
   .hex img {
