--- a/cssjs/main.css
+++ b/cssjs/main.css
@@ -42,6 +42,12 @@ body {
     position: absolute;
     top: 50%;
 }
+.sideways h1 {
+    font-size: 1.8em;
+    margin-bottom: 2ex;
+    font-weight: 300;
+    /* font-family: monospace; */
+}
 
 
 .block {
