fixed some images, calendar styling, added stuff, modified text

--- a/cssjs/calendar.css
+++ b/cssjs/calendar.css
@@ -1,15 +1,21 @@
 .calendar-dropdown {
     position: relative;
     float: right;
-  }
+}
   
 .main-button {
-padding: 10px 10px;
+padding: 8px 8px;
+margin: 4px 4px;
 color: black;
-border: 1px solid rgb(161, 161, 161);
-border-radius: 25px;
+border: 1px solid color-mix(in srgb, var(--accent) 5%, #eee 90%);
+border-radius: 10px;
 cursor: pointer;
-background-color: transparent;
+/* background-color: transparent; */
+background-color: color-mix(in srgb, var(--accent) 5%, #fafafa 90%);
+}
+.main-button:hover{
+  /* font-size:larger; */
+  background-color: color-mix(in srgb, var(--accent) 10%, #eee 90%);
 }
 
 .dropdown-menu {
