--- a/cssjs/rain.css
+++ b/cssjs/rain.css
@@ -9,10 +9,28 @@
     left: 0;
     width: 100%;
     height: 100%;
-    pointer-events: none;
+    /* pointer-events: none; */
     overflow:hidden;
-    z-index: -1;
-    background: linear-gradient(45deg, );
+    /* z-index: -1; */
+    /* background: linear-gradient(45deg, ); */
+}
+
+.rain-controls {
+  margin-top: 10px;
+  /* pointer-events: initial; */
+  z-index: 1;
+  float:right;
+}
+#interact-toggle {
+  /* pointer-events: auto; */
+  font-size: 40pt;
+  border: none;
+  background-color: transparent;
+  color:gray;
+}
+#interact-toggle.active{
+  /* filter: */
+  color: gold;
 }
 
 .raindrop {
