--- a/cssjs/main.css
+++ b/cssjs/main.css
@@ -34,6 +34,12 @@ body {
     padding: 4rem 2rem;
 }
 
+@media only screen and (min-width: 768px) {
+    .page-content {
+        width: calc(100% - 20px);
+    }
+}
+
 
 .sideways {
     /* rotate: -90deg; */
