--- a/cssjs/imghex.css
+++ b/cssjs/imghex.css
@@ -8,7 +8,7 @@ html {
     scroll-behavior: smooth;
 }
 
-/* varsha hexagons */
+/* shreya hexagons */
 .hex-container {
     display: flex;
     flex-direction: column;
