--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,30 +1,23 @@
-<!--- copied from the default, below, and  
-https://github.com/riggraz/no-style-please/blob/master/_includes/head.html.-->
-
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  
-    <title>
-      {%- if page.title -%}
-        {{ page.title }}
-      {%- else -%}
-        {{ site.title }}
-      {%- endif -%}
-    </title>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 
-  
-    <!-- custom fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+{%- if page.title -%}
+<title>{{ page.title }}</title>
+{%- else -%}
+<title>{{ site.title }}</title>
+{%- endif -%}
 
-    <link rel="shortcut icon" type="image/x-icon" href="{{ site.favicon | relative_url }}" />
-    <link rel="stylesheet" href="/{{ site.baseurl }}cssjs/main.css" />
-    {% if page.custom_css %}
-    {% for sheet in page.custom_css %}
-    <link rel="stylesheet" href="/{{ site.baseurl }}cssjs/{{sheet}}.css" />
-    {% endfor %}
-    {% endif %}
-  </head>
+<link rel="stylesheet" href="{{ '/cssjs/main.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/cssjs/enhanced-styles.css' | relative_url }}">
+
+{% if page.custom_css %}
+{% for sheet in page.custom_css %}
+<link rel="stylesheet" href="{{ '/cssjs/' | append: sheet | append: '.css' | relative_url }}">
+{% endfor %}
+{% endif %}
+</head>
