--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <navbar class="enhanced-navbar">
 <div class="nav-home">
     <a href="{{ '/' | relative_url }}">
-        <span class="shreya">Shreya</span> <span class="oli">&</span> <span class="kaito">Kaito</span>
+        <span class="shreya">Shreya</span> <span class="shreya">&</span> <span class="kaito">Kaito</span>
     </a>
 </div>
 
